Created Health Attribute and Damage Effect

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7AC3317A4D99C6DB4BBC36A93686C4E2
-ProjectName=Third Person Game Template
+ProjectName=Gameplay Ability System
+CopyrightNotice=Copyright 2020 Yevhenii Selivanov
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
