--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -3,7 +3,10 @@ ImportTagsFromConfig=True
 WarnOnInvalidTags=True
 FastReplication=False
 InvalidTagCharacters="\"\',"
++GameplayTagRedirects=(OldTagName="Ability.Melee.Damage",NewTagName="Ability.Melee.DealDamage")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Melee.Cooldown",DevComment="")
++GameplayTagList=(Tag="Ability.Melee.DamageEffect",DevComment="")
++GameplayTagList=(Tag="Ability.Melee.DealDamage",DevComment="")
 
