--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,6 +6,9 @@ InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="Ability.Melee.Damage",NewTagName="Ability.Melee.DealDamage")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.HealthRegen.Cooldown",DevComment="")
++GameplayTagList=(Tag="Ability.HealthRegen.Cost",DevComment="")
++GameplayTagList=(Tag="Ability.HealthRegen.RegenEffect",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.DamageEffect",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.DealDamage",DevComment="")
