--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -12,4 +12,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Melee.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.DamageEffect",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.DealDamage",DevComment="")
++GameplayTagList=(Tag="Stat.Health.MaxHealth",DevComment="")
 
