Created Base Cue class; Added HealthRegen cue and created own VFX for it

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,6 +9,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.HealthRegen.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cost",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.RegenEffect",DevComment="")
++GameplayTagList=(Tag="Ability.HealthRegen.Cue",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.DamageEffect",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.DealDamage",DevComment="")
