Added Dash ability; Setuped increasing speed by impulse; Activated ability disables the owner's collision and pushes enemies

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -4,14 +4,17 @@ WarnOnInvalidTags=True
 FastReplication=False
 InvalidTagCharacters="\"\',"
 +GameplayTagRedirects=(OldTagName="Ability.Melee.Damage",NewTagName="Ability.Melee.DealDamage")
++GameplayTagRedirects=(OldTagName="Ability.Melee.DealDamage",NewTagName="Ability.Melee.DealDamageEvent")
++GameplayTagRedirects=(OldTagName="Ability.Melee.DealDamageEvent",NewTagName="Ability.Melee.DamageEvent")
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Dash.DamageEvent",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cost",DevComment="")
-+GameplayTagList=(Tag="Ability.HealthRegen.RegenEffect",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cue",DevComment="")
++GameplayTagList=(Tag="Ability.HealthRegen.RegenEffect",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Melee.DamageEffect",DevComment="")
-+GameplayTagList=(Tag="Ability.Melee.DealDamage",DevComment="")
++GameplayTagList=(Tag="Ability.Melee.DamageEvent",DevComment="")
 +GameplayTagList=(Tag="Stat.Health.MaxHealth",DevComment="")
 
