--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,6 +9,7 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Dash.DamageEvent",DevComment="")
++GameplayTagList=(Tag="Ability.GammaRay.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cost",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cue",DevComment="")
