--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,6 +11,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Dash.DamageEvent",DevComment="")
 +GameplayTagList=(Tag="Ability.GammaRay.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.GammaRay.DamageEvent",DevComment="")
++GameplayTagList=(Tag="Ability.GroundBlast.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cost",DevComment="")
 +GameplayTagList=(Tag="Ability.HealthRegen.Cue",DevComment="")
